Extract Method of all user parameters validations to ValidatorHelper class, allowing reusing the methods between classes and standardizing error messages